tests/baselines/reference/classAbstractDeclarations.d.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts(2,5): error TS1242: 'abstract' modifier can only appear on a class, method, or property declaration.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts(2,28): error TS1183: An implementation cannot be declared in ambient contexts.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts(11,15): error TS18052: Non-abstract class 'CC' does not implement all abstract members of 'AA'
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts(13,15): error TS18052: Non-abstract class 'DD' does not implement all abstract members of 'BB'
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts(17,15): error TS18052: Non-abstract class 'FF' does not implement all abstract members of 'CC'


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts (5 errors) ====
    declare abstract class A {
        abstract constructor() {}
        ~~~~~~~~
!!! error TS1242: 'abstract' modifier can only appear on a class, method, or property declaration.
                               ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
    }
    
    declare abstract class AA {
        abstract foo();
    }
    
    declare abstract class BB extends AA {}
    
    declare class CC extends AA {}
                  ~~
!!! error TS18052: Non-abstract class 'CC' does not implement all abstract members of 'AA'
!!! related TS2515 tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts:6:14: Non-abstract class 'CC' does not implement inherited abstract member 'foo' from class 'AA'.
    
    declare class DD extends BB {}
                  ~~
!!! error TS18052: Non-abstract class 'DD' does not implement all abstract members of 'BB'
!!! related TS2515 tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts:6:14: Non-abstract class 'DD' does not implement inherited abstract member 'foo' from class 'BB'.
    
    declare abstract class EE extends BB {}
    
    declare class FF extends CC {}
                  ~~
!!! error TS18052: Non-abstract class 'FF' does not implement all abstract members of 'CC'
!!! related TS2515 tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts:6:14: Non-abstract class 'FF' does not implement inherited abstract member 'foo' from class 'CC'.
    
    declare abstract class GG extends CC {}
    
    declare abstract class AAA {}
    
    declare abstract class BBB extends AAA {}
    
    declare class CCC extends AAA {}